--- a/desafios/desafio-cordel/style.css
+++ b/desafios/desafio-cordel/style.css
@@ -18,6 +18,7 @@ header h1{
     font-family: 'Passion One',sans-serif;
     font-size: 60px;
     font-weight: bold;
+    font-variant: small-caps;
 }
 
 header p{
@@ -39,6 +40,9 @@ section pre{
     text-align: left;
     line-height: 1.9;
     padding: 40px 0px 40px 30px;
+}
+pre{
+    white-space: pre-line;
 }
 
 section.foto1{
