--- a/desafios/desafio-cordel/style.css
+++ b/desafios/desafio-cordel/style.css
@@ -46,7 +46,7 @@ pre{
 }
 
 section.foto1{
-    background: gray url('imagens/background001.jpg') no-repeat fixed center center;
+    background: gray url('imagens/background001.jpg') no-repeat fixed right center;
     background-size: cover;
 }
 
@@ -60,7 +60,7 @@ div{
     border-radius: 5px;
 }
 section.foto2{
-    background: gray url('imagens/background002.jpg') no-repeat fixed center center;
+    background: gray url('imagens/background002.jpg') no-repeat fixed right center;
     background-size: cover;
 }
 
