--- a/exercicios/ex026/mq004/estilos/media-query.css
+++ b/exercicios/ex026/mq004/estilos/media-query.css
@@ -2,6 +2,55 @@
 
 /* Todas as demais mídias*/
 
+/* Typical Device Breakpoints
+Peq. Telas: até 600px 
+Celular: de 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+Grandes Telas: acima de 1200px 
+*/
+
+
 @media print{
-    
+    img#phone{display:none}
+    img#print{display:block}
+    img#pc{display:none}
+    img#tv{display:none}    
+    img#tablet{display:none}
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px){
+    body{
+        background: black url(../imagens/back-tablet.jpg) no-repeat fixed center center;
+    }
+img#phone{display:none}
+img#tablet{display:block}
+img#print{display:none}
+img#pc{display:none}
+img#tv{display:none}
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px){
+    body{
+        background: black url(../imagens/back-pc.jpg) no-repeat fixed center center;
+    }
+    img#phone{display:none}
+    img#tablet{display:none}
+    img#print{display:none}
+    img#pc{display:block}
+    img#tv{display:none}
+}
+
+@media screen and (min-width: 1200px){
+    body{
+        background: black url(../imagens/back-tv.jpg) no-repeat fixed center center;
+    }
+    img#phone{display:none}
+    img#tablet{display:none}
+    img#print{display:none}
+    img#pc{display:none}
+    img#tv{display:block}
+    main{
+        width: 80vw;
+    }
 }
