--- a/exercicios/ex026/mq004/style.css
+++ b/exercicios/ex026/mq004/style.css
@@ -15,7 +15,7 @@ body, html{
     height: 100vh;
 }
 body{
-    background: black url(imagens/back-phone.jpg) no-repeat;
+    background: black url(imagens/back-phone.jpg) no-repeat center center;
 }
 main{
     background-color: rgba(255, 255, 255, 0.785);
@@ -24,7 +24,13 @@ main{
     border-radius: 10px;
     padding: 10px;
 }
-img#phone{display:none}
+main img{
+    margin: auto;
+}
+main h1{
+    text-align: center;
+}
+img#phone{display:block}
 img#tablet{display:none}
 img#print{display:none}
 img#pc{display:none}
