--- a/exercicios/ex026/mq005/style.css
+++ b/exercicios/ex026/mq005/style.css
@@ -50,8 +50,8 @@ article{
     padding: 20px;
     box-shadow: 0px 5px 10px #00000057;
     border-radius: 0px 0px 8px 8px;
-    background: black url(foto.jpg) no-repeat fixed center center;
-    background-size: contain;
+    /*background: black url(foto.jpg) no-repeat fixed center center;
+    background-size: contain;*/
 }
 article h2{
     padding: 8px;
@@ -65,5 +65,14 @@ nav a:hover{
     background-color: rgb(128, 128, 128);
     transition: 0.25s;
     transition-delay: 0.1;
+}
+#botao{
+    background-color: gray;
+    width: 200px;
+    margin: 30px;
+    border: 3px solid red;
+    height: 50px;
+    color: white;
+    font-size: 1.2em;
 }
 
