--- a/desafios/d014/style.css
+++ b/desafios/d014/style.css
@@ -2,15 +2,29 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-header{
+header,footer{
     background-color: #1E4C9A;
 }
-#cabecalho>h1{
+
+footer>h1{
+    font-family: 'Abril Fatface';
+    color: white;
+    font-weight: 400;
+    padding: 10px 10px 0px 10px;
+    text-align: center;
+}
+
+header>h1{
     font-family: 'Abril Fatface';
     color: white;
     font-weight: 400;
     padding: 10px;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.502);
+    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.502);
+}
+footer{
+    margin: 0px;
+    padding: 0px 0px 10px 0px;
+    box-shadow: 0px -1px 6px rgba(0, 0, 0, 0.502);
 }
 h1{
     text-align: left;
@@ -26,6 +40,7 @@ h1{
 img{
     border-radius: 4px;
 }
+
 i{
     text-align: right;
     margin: 0px 10px 0px 0px;
@@ -41,6 +56,9 @@ span{
     color: white;
     text-decoration: none;
     font-weight: bold;
+}
+.espacamento-imagens{
+    margin: 0px 0px 40px 0px;
 }
 p{
     line-height: 1.8em;
@@ -60,4 +78,13 @@ a{
 div{
     text-align: center;
     margin: auto;
+}
+a:hover{
+    color: black;
+}
+footer>p{
+    text-align: center;
+    margin: 0px;
+    
+    font-weight: bolder;
 }
